--- a/css/subject3.css
+++ b/css/subject3.css
@@ -1,7 +1,7 @@
 body {
   background-color: #f5f5f5;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 div {
@@ -13,29 +13,32 @@ div {
   margin: 20px;
 }
 
-.inside-info {
-  background-color: white;
-}
-
-div:first-child {
-  background-color: tomato;
+h1 {
+  display: block;
+  font-weight: 600;
 }
 
 div:nth-child(2) {
-  background-color: teal;
+  background-color: tomato;
 }
 
 div:nth-child(3) {
+  background-color: teal;
+}
+
+div:nth-child(4) {
   background-color: burlywood;
 }
 
 div:last-child {
   background-color: thistle;
 }
-span {
-  background-color: white;
-}
 
 div > span {
-  font-size: 22px;
+  background-color: white;
+  display: block;
+  height: 50px;
+  position: relative;
+  top: 20px;
+  font-weight: 600;
 }
