--- a/css/subject3.css
+++ b/css/subject3.css
@@ -1,7 +1,7 @@
 body {
   background-color: #f5f5f5;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 div {
@@ -11,11 +11,6 @@ div {
   border: 3px solid;
   border-color: white;
   margin: 20px;
-}
-
-h1 {
-  display: block;
-  font-weight: 600;
 }
 
 div:nth-child(2) {
@@ -41,4 +36,8 @@ div > span {
   position: relative;
   top: 20px;
   font-weight: 600;
+}
+
+.color-name {
+  font-size: 22px;
 }
