--- a/css/subject3.css
+++ b/css/subject3.css
@@ -24,7 +24,7 @@ div:nth-child(2) {
   background-color: tomato;
 }
 
-div:nth-child(3) {
+body > div:nth-child(3) {
   background-color: teal;
 }
 
