--- a/css/subject5.css
+++ b/css/subject5.css
@@ -2,14 +2,15 @@ body {
   height: 100%;
   width: 50%;
   font-family: sans-serif;
-  background-color: #00c6ad;
+  background-color: #faf4fe;
 }
 
 .main-box {
   background-color: white;
   font-weight: 600;
   position: absolute;
-  left: 33%;
+  left: 35%;
+  border-radius: 4px solid #faf4fe;
 }
 
 .playlist {
@@ -20,7 +21,7 @@ body {
 }
 
 .playlist i {
-  margin-right: 190px;
+  margin-right: 150px;
   margin-left: -80px;
 }
 
