--- a/css/subject6.css
+++ b/css/subject6.css
@@ -7,7 +7,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: aliceblue;
 }
 
 .header {
@@ -50,9 +49,14 @@ body {
   opacity: 0.6;
 }
 
+.main {
+  background-color: aliceblue;
+  width: 50%;
+  padding-left: 20px;
+}
+
 .bookOfTheDay {
-  margin-top: 70px;
-  padding-right: 18%;
+  margin: 70px 0;
 }
 
 .bookOfTheDay__title {
@@ -101,7 +105,6 @@ body {
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  padding-left: 5px;
   margin-bottom: 30px;
 }
 
@@ -115,7 +118,7 @@ body {
   font-weight: 600;
   font-size: 13px;
   background-color: rgb(219, 223, 211);
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .bookOfTheDay__buy {
@@ -147,4 +150,74 @@ body {
   border-radius: 5px;
   height: 50px;
   width: 130px;
+}
+
+.topAdventures {
+  overflow-x: scroll;
+  margin-bottom: 30px;
+}
+
+.topAdventures__title {
+  font-size: 27px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.topAdventures__booklist {
+  display: flex;
+}
+
+.topAdventures__booklist li {
+  min-width: 200px;
+}
+
+.topAdventures img {
+  width: 100px;
+  height: 150px;
+  border-radius: 5px;
+}
+
+.topAdventures__star {
+  color: #ffce33;
+  font-size: 10px;
+  padding-left: 5px;
+}
+
+.topAdventures__star i:last-child {
+  color: black;
+  opacity: 0.2;
+}
+
+.popularAuthors__title {
+  font-size: 27px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.popularAuthors__info {
+  display: flex;
+  flex-direction: row;
+}
+
+.popularAuthors__info img {
+  width: 130px;
+  height: 160px;
+  border-radius: 10px;
+  margin-right: 40px;
+}
+
+.popularAuthor__name {
+  font-size: 24px;
+  font-weight: 600;
+  opacity: 0.7;
+}
+
+.popularAuthor__info {
+  margin-top: 15px;
+  font-size: 18px;
+  opacity: 0.4;
+}
+
+.popularAuthor__info p:last-child {
+  opacity: 0.2;
 }
