--- a/css/subject7.css
+++ b/css/subject7.css
@@ -20,7 +20,7 @@ body {
   border-radius: 30px;
   margin: 40px 0;
   border-radius: 20px;
-  box-shadow: 0.1px 0.1px;
+  border: 1px solid;
   position: relative;
 }
 
@@ -47,13 +47,13 @@ body {
 
 .artist__name {
   font-size: 28px;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 15px;
 }
 
 .artist__genre {
   opacity: 0.6;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .button {
@@ -140,7 +140,7 @@ body {
 
 .musiclist__music-title {
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .control-box {
@@ -170,3 +170,61 @@ body {
   align-items: center;
   width: 30%;
 }
+
+.playing-music__main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.playing-music__main img {
+  width: 400px;
+  height: 400px;
+  border-radius: 30px;
+  margin: 60px 0;
+  border: 1px solid;
+}
+
+.playing-music__title {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.playing-music__artist {
+  font-size: 20px;
+  opacity: 0.6;
+  margin-bottom: 30px;
+}
+
+.timeline {
+  width: 90%;
+  margin-bottom: 25%;
+}
+
+.timeline__time {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  opacity: 0.6;
+}
+
+.timeline__range{
+    width: 100%;
+    accent-color: black;
+}
+
+.timeline__control-box {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.timeline__control-box i:first-child,
+.timeline__control-box i:last-child {
+  opacity: 0.5;
+}
+
+.
