--- a/css/subject7.css
+++ b/css/subject7.css
@@ -105,7 +105,7 @@ body {
 .musiclist__musicbox {
   width: 80%;
   margin-bottom: 50px;
-  background-color: #e8eb67;
+  background-color: #eff0bf;
   border-radius: 20px;
   border: 0.5px solid;
 }
