--- a/css/subject7.css
+++ b/css/subject7.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: "Nunito", sans-serif;
-  background-color: #f2f2f5;
   display: flex;
   justify-content: space-around;
 }
@@ -14,7 +13,7 @@ body {
 .playlist,
 .playing-music {
   width: 33%;
-  background-color: #c8b6de;
+  background-color: #B6E388;
   display: flex;
   flex-direction: column;
   border-radius: 30px;
@@ -99,24 +98,26 @@ body {
 
 .musiclist .musiclist__musicbox:first-child {
   box-shadow: 1px 1px 1px 1px;
-  border-radius: 20px;
 }
 
 .musiclist__musicbox {
   width: 80%;
   margin-bottom: 50px;
-  background-color: #eff0bf;
+  background-color: #E1FFB1;
   border-radius: 20px;
   border: 0.5px solid;
   position: relative;
+  box-sizing: border-box;
 }
 
 .musiclist__music {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   margin-bottom: 20px;
-  padding: 0 15%;
+padding-right: 35px;
 }
+
 
 .musiclist__music img {
   width: 70px;
@@ -132,6 +133,7 @@ body {
   height: 70px;
   background-color: black;
   position: absolute;
+  left: 13px;
   top: 15px;
   opacity: 0.6;
   border-radius: 10px;
